instances/teak-demo/env/plugins/drydock/k8s/ingress/cms.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cms
  namespace: openedx
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: studio.www.myopenedx.com
    http:
      paths:
      - pathType: Prefix
        path: "/course-authoring"
        backend:
          service:
            name: caddy
            port:
              number: 80
      - pathType: Prefix
        path: "/authoring"
        backend:
          service:
            name: caddy
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy
            port:
              number: 80
  tls:
  - hosts:
    - studio.www.myopenedx.com
    secretName: cms-host-tls
