instances/teak-demo/env/plugins/drydock/k8s/ingress/mfe.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mfe
  namespace: openedx
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: apps.www.myopenedx.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy
            port:
              number: 80
  tls:
  - hosts:
    - apps.www.myopenedx.com
    secretName: mfe-host-tls
